Improved panel allocation logic to avoid discontinuous jumps and fix window list allocation

--- a/data/theme/cinnamon.css
+++ b/data/theme/cinnamon.css
@@ -1172,8 +1172,6 @@ StScrollBar StButton#vhandle:hover {
 	background-gradient-end: rgba(255,255,255,0.2);
 	box-shadow: inset 0px 0px 1px 1px rgba(170,170,170,0.5);
 	border-radius: 2px 2px 0px 0px;
-	padding-left: 5px;
-	padding-right: 5px;
 	transition-duration: 100;
 }
 .window-list-item-box:active,
